; ModuleID = '/home/carl/AnghaBench/tmux/extr_server-fn.c_server_unzoom_window.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_server-fn.c_server_unzoom_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @server_unzoom_window(%struct.window* %0) #0 {
  %2 = alloca %struct.window*, align 8
  store %struct.window* %0, %struct.window** %2, align 8
  %3 = load %struct.window*, %struct.window** %2, align 8
  %4 = call i64 @window_unzoom(%struct.window* %3)
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load %struct.window*, %struct.window** %2, align 8
  %8 = call i32 @server_redraw_window(%struct.window* %7)
  br label %9

9:                                                ; preds = %6, %1
  ret void
}

declare dso_local i64 @window_unzoom(%struct.window*) #1

declare dso_local i32 @server_redraw_window(%struct.window*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
